src/objects/Parent_Obj__c.object
<CustomObject>
    <fields>
        <fullName>NoOfYears__c</fullName>
        <label>NoOfYears</label>
        <summaryForeignKey>Child_Obj__c.StudentID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmountPaid__c</fullName>
        <label>TotalAmountPaid</label>
        <summarizedField>Child_Obj__c.Total_fees_Paid__c</summarizedField>
        <summaryForeignKey>Child_Obj__c.StudentID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Parent Obj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>